--- a/backendAuthenticationApisRdbmsPrismSetup/package.json
+++ b/backendAuthenticationApisRdbmsPrismSetup/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -19,9 +20,14 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.4",
-    "prisma": "^6.4.1"
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
+    "prisma": "^6.4.1",
+    "typescript-eslint": "^8.24.1"
   }
 }
