--- a/backendAuthenticationApisRdbmsPrismSetup/package.json
+++ b/backendAuthenticationApisRdbmsPrismSetup/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.4",
